[package]
name = "gurafu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
strum = "0.24.1"
strum_macros = "0.24.2"

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "fast-rng", "macro-diagnostics"]
